edits to sec.1-4

--- a/guidelines.tex
+++ b/guidelines.tex
@@ -7,13 +7,13 @@ It is a known fact that any commitment scheme in the standard model (non random 
   \item The sender sends $n$ messages directly to the receiver, which he claims are the decommitted values.
   \item The receiver then sends a challenge to the sender specifying $\ssec$ random linear combinations of all $n$ messages.
   \item The sender computes these $\ssec$ combinations, using the homomorphic property of the scheme, and decommits toward the receiver.
-  \item The receiver verifies the decommits and in addition computes the same combinations on the $n$ initially claimed messages. If these then matches the correct decommitted combinations he is guaranteed that the claimed messages are in fact what the sender originally committed to.
+  \item The receiver verifies the decommits and in addition computes the same combinations on the $n$ initially claimed messages. If these match the correct decommitted combinations, he is guaranteed that the claimed messages are in fact what the sender originally committed to.
 \end{enumerate}
 
 We highlight that the above technique also works for a single large message, as the sender is this case can commit to the message block-wise to obtain the same effect.
 
 \paragraph{Trade-offs and Considerations.}
-We advocate that despite a specific application not specifically requiring \textit{homomorphic} commitments, SplitCommit might be a right fit nonetheless. This is largely due to the concrete efficiency of the scheme as demonstrated in \secref{performance} and by the above batch decommit optimization. In addition, when committing to random messages, the scheme of \cite{DBLP:conf/tcc/FrederiksenJNT16} (and SplitCommit) allows for sub-linear communication in the commitment phase as these can be defined from the outputs of the PRGs directly. We here list the most profound pros and cons to consider before using the scheme:
+We advocate that even applications where the \textit{homomorphic} property is not required, SplitCommit might be a right fit nonetheless. This is largely due to the concrete efficiency of the scheme as demonstrated in \secref{performance} and by the above batch decommit optimization. In addition, when committing to random messages, the scheme of \cite{DBLP:conf/tcc/FrederiksenJNT16} (and SplitCommit) allows for sub-linear communication in the commitment phase as these can be defined from the outputs of the PRGs directly. We here list the most profound pros and cons to consider before using the scheme:
 \begin{description}
   \item[Pros:]
   ~
@@ -30,12 +30,12 @@ We advocate that despite a specific application not specifically requiring \text
      \item Two-party, directional commitments only. If the receiver needs to commit to messages as well, a separate instance of the scheme needs to be setup in the other direction.
      \item Requires OT to bootstrap. Depending on setting this can be too expensive to setup, especially when only a few commitments to small messages are required.
      \item Committing is interactive (single round).\footnote{For some settings, the Fiat-Shamir optimization~\cite{DBLP:conf/crypto/FiatS86} in the random oracle model can be applied to eliminate this interaction.}
-     \item Non-interactive decommitment (non-batch) has substantial overhead, $\sim$4x for 128-bit messages with $\ssec=40$.\samefootnote
+     \item Non-interactive decommitment (non-batch) has $\sim4\times$ communication overhead for 128-bit messages with $\ssec=40$.\samefootnote
    \end{enumerate}
 \end{description}
 
 \subsection{Comparison to Random Oracle commitments}
-It is widely know that a random oracle (RO) $h:\zo^* \to \zo^l$ can be used to implement a commitment scheme in a very straight-forward way. In order to commit to a message $m$, the sender computes $c = h(m\|r)$ for some fresh random string $r$ and sends $c$ to the receiver. To decommit, the sender reveals $m$ and $r$ to the receiver, who can then check whether $c = h(m\|r)$ or not. The above scheme can be proven secure in UC-framework if $h$ is modeled as an extractable, programmable random oracle model. With this assumption the simulator in the proof of security has complete control over the hash function and can both see what values are hashed (extract) and decide on a particular output (program). This is clearly a very strong assumption on any real-world function (and impossible to achieve in general \cite{DBLP:conf/stoc/CanettiGH98}), and we note for completeness that several other commitment schemes exists using weaker flavors of ROs such as~\cite{DBLP:conf/tcc/HofheinzM04,DBLP:conf/ccs/Canetti0S14}. The latter schemes are however less efficient than the above sketched out scheme, and as such we take a worst-case approach by comparing SplitCommit to the most efficient RO based construction. Even so, it can clearly be seen in by the following discussion that SplitCommit on several parameters rival or supersede the RO scheme.
+It is widely know that a random oracle (RO) $h:\zo^* \to \zo^l$ can be used to implement a commitment scheme in a very straight-forward way. In order to commit to a message $m$, the sender computes $c = h(m\|r)$ for some fresh random string $r$ and sends $c$ to the receiver. To decommit, the sender reveals $m$ and $r$ to the receiver, who can then check whether $c = h(m\|r)$ or not. The above scheme can be proven secure in UC-framework if $h$ is modeled as an extractable, programmable\footnote{Programmability is required to make the commitment equivocable.} random oracle model. With this assumption the simulator in the proof of security has complete control over the hash function and can both see what values are hashed (extract) and decide on a particular output (program). This is clearly a very strong assumption on any real-world function (and impossible to achieve in general \cite{DBLP:conf/stoc/CanettiGH98}), and we note for completeness that several other commitment schemes exists using weaker flavors of ROs such as~\cite{DBLP:conf/tcc/HofheinzM04,DBLP:conf/ccs/Canetti0S14}. The latter schemes are however less efficient than the above sketched out scheme, and as such we take a worst-case approach by comparing SplitCommit to the most efficient RO based construction. Even so, it can clearly be seen in by the following discussion that the performance of SplitCommit is on par with or supersede that of the RO scheme for several interesting sets of parameters.
 
 \begin{description}
   \item[Starting Assumption:] The RO scheme requires the existence of an extractable, programmable random oracle to be provably UC-secure, whereas SplitCommit requires the existence of UC OT. Although UC OT is also a strong starting requirement it is strictly weaker than that of a random oracle.
