--- a/performance.tex
+++ b/performance.tex
@@ -8,6 +8,6 @@ In addition, we benchmark our implementation in the 100Mbps WAN setting with a 8
 
 
 
-When performing bit commitments in the LAN setting, $n=2^{24}$ commitments to random bits required 1.3 seconds and decommitting required 2 seconds. Interestingly, batch decommitting is slightly slower, requiring 2.3 seconds to decommit. We attribute this to the reduction in communication being out weighed by the add computation that is required. Indeed, in the 100Mbps WAN setting batch decommitting is faster, requiring 60 seconds as opposed to 61.
+When performing bit commitments in the LAN setting, $n=2^{24}$ commitments to random bits required 1.3 seconds and decommitting required 2 seconds. Interestingly, batch decommitting is slightly slower, requiring 2.3 seconds to decommit. We attribute this to the reduction in communication being out weighed by the added computation that is required by batch decommit. Indeed, in the 100Mbps WAN setting where communication is more expensive, batch decommitting is faster, requiring 60 seconds as opposed to 61.
 
-In terms of communication overheads, committing to a random 128 bit value requires is 134 bits per commitment, with an added 128 overhead for chosen message. Decommitting requires 524 bits per while batch decommitting only requires 128 bits per with a constant additive overhead of 20960 bits. Committing to bits requires 40 bits of communication and decommitting requires 80 bits. Batch decommitting only requires a single bit of communication per with a constant additive overhead of 3200 bits.
+In terms of communication overheads, committing to a random 128 bit value requires 134 bits per, with an added 128 overhead for chosen message. Decommitting requires 524 bits per while batch decommitting only requires 128 bits per with a constant additive overhead of 20960 bits. Committing to bits requires 40 bits of communication and decommitting requires 80 bits. Batch decommitting only requires a single bit of communication per with a constant additive overhead of 3200 bits.
