--- a/building.tex
+++ b/building.tex
@@ -1,6 +1,4 @@
 % -*- root:main.tex -*-
 
-\section{Building SplitCommit}
-SplitCommit and its dependencies can be found at \url{https://github.com/AarhusCrypto/SplitCommit}. This project utilizes the cmake build systems and capable of integrating into larger build systems with minimal overhead. Apart from cmake and other basic utilities, the implementation builds on the libOTe~\cite{libOTe} library which requires the c++ utility library Boost~\cite{boost} and cryptography libary Miracl~\cite{miracl}. For complete details on how to build these utilities, we refer the reader to the readme file contained in the git repository.
-
+%\section{Building SplitCommit}
 
