Loads of tiny changes

--- a/applications.tex
+++ b/applications.tex
@@ -3,6 +3,6 @@
 \section{Applications and Usage Guidelines}
 In this section we highlight some of the works in the cryptographic literature that benefit directly from an efficient XOR-homomorphic commitment scheme implementation.
 
-The LEGO paradigm for maliciously secure two-party computation (2PC) using garbled circuits was proposed in \cite{DBLP:conf/tcc/NielsenO09} as an alternative to the whole-circuit Cut-and-Choose (\CC) approach of \cite{DBLP:conf/eurocrypt/LindellP07} and many following works. The central idea of whole-circuit \CC is to achieve malicious security by constructing many garbled circuit and checking some fraction of them, where each circuit computes the same target function $f$. With this approach one can guarantee security except with probability $2^{-\ssec}$ by garbling and sending $O(\ssec)$ circuits. With LEGO, these checks are instead performed on individually garbled NAND gates, which are later combined in a secure way so that they compute $f$. Via a combinatorial argument it can be shown that in then suffices to send $O(\frac{\ssec}{\log(|f|)})$ garbled circuits, a substantial asymptotic savings over whole-circuit \CC. However, in order to combine the constructed NAND gates so that they securely compute $f$, the gate constructor is required to commit to all wires of all garbled gates using XOR-homomorphic commitments. This is needed as it enables secure ``soldering'' of an output wire of one garbled gate onto the input wire of another, thus building a garbled circuit using the NAND gates as building blocks. Although the LEGO paradigm is asymptotically more efficient, the overhead of three commitments per NAND gate is substantial when looking at concrete performance and required communication. As the amount of commitments grows linearly in the size of the final circuit $f$ it is evident that efficient constructions and implementations of XOR-homomorphic commitments are instrumental for the efficiency of LEGO-like 2PC protocols. Recently, the work of \cite{NST17} implemented the TinyLEGO protocol of \cite{DBLP:journals/iacr/FrederiksenJNT15} using an early version of what is now the SplitCommit library. In fact, the SplitCommit project is based on a fork of \cite{NST17}, which has since adopted it as an external library.
+The LEGO paradigm for maliciously secure two-party computation (2PC) using garbled circuits was proposed in \cite{DBLP:conf/tcc/NielsenO09} as an alternative to the whole-circuit Cut-and-Choose (\CC) approach of \cite{DBLP:conf/eurocrypt/LindellP07} and many following works. The central idea of whole-circuit \CC is to achieve malicious security by constructing several garbled circuits, each computing the same target function $f$, and checking some fraction of them for correctness. With this approach one can guarantee that when evaluating the remaining garbled circuits security and correctness holds except with probability $2^{-\ssec}$ from sending $O(\ssec)$ circuits. With LEGO, these checks are instead performed on individually garbled NAND gates, which are later combined in a secure way so that they compute $f$. Via a combinatorial argument it can be shown that in then suffices to send $O(\frac{\ssec}{\log(|f|)})$ garbled circuits, a substantial asymptotic savings over whole-circuit \CC. However, in order to combine the constructed NAND gates so that they securely compute $f$, the gate constructor is required to commit to all wires of all garbled gates using XOR-homomorphic commitments. This is needed as it enables secure ``soldering'' of an output wire of one garbled gate onto the input wire of another, thus building a garbled circuit using the NAND gates as building blocks. Although the LEGO paradigm is asymptotically more efficient, the overhead of three commitments per NAND gate is substantial when looking at concrete performance and required communication. As the amount of commitments grows linearly in the size of the final circuit $f$ it is evident that efficient constructions and implementations of XOR-homomorphic commitments are instrumental for the efficiency of any LEGO-like 2PC protocol. Recently, the work of \cite{NST17} implemented the TinyLEGO protocol of \cite{DBLP:journals/iacr/FrederiksenJNT15} using an early version of what is now the SplitCommit library. In fact, the SplitCommit project is based on a fork of \cite{NST17}, which has since adopted it as an external library.
 
-In addition to the above 2PC application, XOR-homomorphic commitments have also been proposed as building blocks for evaluating RAM programs with malicious security using garbled circuits \cite{DBLP:conf/eurocrypt/AfsharHMR15} and achieving non-interactive maliciously secure 2PC in the batched setting \cite{DBLP:journals/iacr/MohasselR17}.
+In addition to LEGO, XOR-homomorphic commitments have also been proposed as building blocks for evaluating RAM programs with malicious security using garbled circuits \cite{DBLP:conf/eurocrypt/AfsharHMR15} and achieving non-interactive maliciously secure 2PC in the batched setting \cite{DBLP:journals/iacr/MohasselR17}.
