--- a/guidelines.tex
+++ b/guidelines.tex
@@ -2,7 +2,7 @@
 
 \subsection{Usage Guidelines}
 \seclab{usage_guidelines}
-It is a known fact that any commitment scheme in the standard model (non random oracle~\cite{DBLP:conf/ccs/BellareR93}) which is UC-secure \cite{DBLP:conf/focs/Canetti01} requires communicating at least the message size, both in the commitment and decommitment phase. The work of \cite{DBLP:conf/eurocrypt/GarayIKW14} was the first protocol to meet these bounds asymptotically for the non-homomorphic case, whereas \cite{DBLP:conf/tcc/FrederiksenJNT16} achieved the same for additively homomorphic commitments. It is an interesting observation, that although \cite{DBLP:conf/tcc/FrederiksenJNT16} does not achieve the above when decommitting to a single value, one can exploit the homomorphic property of the scheme to achieve when considering many or large messages. The technique is called batch opening and it works as follows for decommitting to $n$ messages:
+It is a known fact that any UC-secure \cite{DBLP:conf/focs/Canetti01} commitment scheme in the standard model (non random oracle~\cite{DBLP:conf/ccs/BellareR93}) requires communicating at least the message size, in both the commitment and decommitment phase. The work of \cite{DBLP:conf/eurocrypt/GarayIKW14} was the first protocol to meet these bounds asymptotically for the non-homomorphic case, whereas \cite{DBLP:conf/tcc/FrederiksenJNT16} achieved the same for additively homomorphic commitments. It is an interesting observation, that although \cite{DBLP:conf/tcc/FrederiksenJNT16} does not achieve the above when decommitting to a single value, one can exploit the homomorphic property of the scheme to get around it when considering many or large messages. The technique is called batch opening and it works as follows for decommitting to $n$ messages:
 \begin{enumerate}
   \item The sender sends $n$ messages directly to the receiver, which he claims are the decommitted values.
   \item The receiver then sends a challenge to the sender specifying $\ssec$ random linear combinations of all $n$ messages.
@@ -35,16 +35,16 @@ We advocate that even applications where the \textit{homomorphic} property is no
 \end{description}
 
 \subsection{Comparison to Random Oracle commitments}
-It is widely know that a random oracle (RO) $h:\zo^* \to \zo^l$ can be used to implement a commitment scheme in a very straight-forward way. In order to commit to a message $m$, the sender computes $c = h(m\|r)$ for some fresh random string $r$ and sends $c$ to the receiver. To decommit, the sender reveals $m$ and $r$ to the receiver, who can then check whether $c = h(m\|r)$ or not. The above scheme can be proven secure in UC-framework if $h$ is modeled as an extractable, programmable\footnote{Programmability is required to make the commitment equivocable.} random oracle model. With this assumption the simulator in the proof of security has complete control over the hash function and can both see what values are hashed (extract) and decide on a particular output (program). This is clearly a very strong assumption on any real-world function (and impossible to achieve in general \cite{DBLP:conf/stoc/CanettiGH98}), and we note for completeness that several other commitment schemes exists using weaker flavors of ROs such as~\cite{DBLP:conf/tcc/HofheinzM04,DBLP:conf/ccs/Canetti0S14}. The latter schemes are however less efficient than the above sketched out scheme, and as such we take a worst-case approach by comparing SplitCommit to the most efficient RO based construction. Even so, it can clearly be seen in by the following discussion that the performance of SplitCommit is on par with or supersede that of the RO scheme for several interesting sets of parameters.
+It is widely know that a random oracle (RO) $h:\zo^* \to \zo^l$ can be used to implement a commitment scheme in a very straight-forward way. In order to commit to a message $m$, the sender computes $c = h(m\|r)$ for some fresh random string $r$ and sends $c$ to the receiver. To decommit, the sender reveals $m$ and $r$ to the receiver, who can then check whether $c = h(m\|r)$ or not. The above scheme can be proven secure in UC-framework if $h$ is modeled as an extractable, programmable random oracle.\footnote{Programmability is required to make the commitment equivocal.} With this assumption the simulator in the proof of security has complete control over the hash function and can both see what values are being hashed (extract) and decide on a particular output (program). This is clearly a very strong assumption on any real-world function (and impossible to achieve in general \cite{DBLP:conf/stoc/CanettiGH98}), and we note for completeness that several other commitment schemes exists using weaker flavors of ROs such as~\cite{DBLP:conf/tcc/HofheinzM04,DBLP:conf/ccs/Canetti0S14}. The latter schemes are however less efficient than the above sketched out scheme, and as such we take a worst-case approach by comparing SplitCommit to the most efficient RO based construction. Even so, it can be seen by the following discussions that the performance of SplitCommit is on par with, and sometimes supersedes that of the RO scheme on several interesting parameters.
 
 \begin{description}
-  \item[Starting Assumption:] The RO scheme requires the existence of an extractable, programmable random oracle to be provably UC-secure, whereas SplitCommit requires the existence of UC OT. Although UC OT is also a strong starting requirement it is strictly weaker than that of a random oracle.
-  \item[Communication:] Typically the random oracle $h$ would be instantiated using a cryptographic hash function, say SHA-256 which then means the output size is 256 bits. Therefore no matter the size of the message (or if it's random or not), the sender needs to send 256 bits per committed value. This can be both a strength and a weakness, depending on the message size. Clearly if the message is large, the RO scheme can achieve sub-linear communication when committing, even for chosen messages. However for smaller messages, such as \eg commitments to 128-bit strings, committing to a value has a 2x overhead. For decommitting, the sender needs to send the messages and the random string $r$ which is typically around 128 bits long. Again for the case of 128-bit messages yields a 2x overhead.
+  \item[Assumption:] The RO scheme requires the existence of an extractable, programmable random oracle to be provably UC-secure, whereas SplitCommit requires the existence of UC OT. Although UC OT is also a strong starting requirement it is more generic than a random oracle.
+  \item[Communication:] Typically the random oracle $h$ would be instantiated using a cryptographic hash function, say SHA-256 which then means the output size is 256 bits. Therefore no matter the size of the message (or if it's random or not), the sender needs to send 256 bits per committed value. This can be both a strength and a weakness, depending on the message size. Clearly if the message is large, the RO scheme can achieve sub-linear communication when committing, even for chosen messages. However for smaller messages, such as \eg commitments to 128-bit strings, committing to a value has a 2x overhead. For decommitting, the sender needs to send the message and the random string $r$ which is typically around 128 bits long. Again for the case of 128-bit messages this yields a 2x overhead.
 
-  For SplitCommit the cost of committing can be sublinear for random messages and essentially the message size for large chosen messages. The exact trade-offs depends on the security parameter and ECC parameters, but as an example, for 128-bit messages and $\ssec=40$ it requires 134 bits to commit to a random message and 128-bits to decommit using batch decommit.
+  For SplitCommit the cost of committing can be sublinear for random messages and essentially the message size for large chosen messages. The sublinear communication is only true for somewhat large messages and the exact cutting point depends on the security parameter and ECC parameters, but as an example, for 128-bit messages and $\ssec=40$ it requires 134 bits to commit to a random message and 128-bits to decommit using batch decommit.
 
   \item[Computation:] From the performance section we see that SplitCommit can commit and decommit to a value in less than a microsecond (when considering many values). Based on the observations of \cite{DBLP:conf/pkc/CascudoDDGNT15} this roughly equivalent to a SHA-256 evaluation.
   \item[Homomorphism:] SplitCommit allows additively homomorphic decommits whereas the RO scheme does not.
-  \item[Setup Cost:] SplitCommit requires an intial setup phase involving running a number of potentially expensive seed OTs. However, depending on the scope and complexity of the application as a whole this can be considered anything from a complete deal-breaker to a negligible added cost. The RO scheme requires no such setup.
+  \item[Setup Cost:] SplitCommit requires an intial setup phase involving a number of potentially expensive seed OTs. However, depending on the scope and complexity of the application this can be considered anything from a complete deal-breaker to a negligible added cost. The RO scheme requires no such setup.
   \item[Interactiveness:] The RO scheme is non-interactive in both the commitment and decommitment phase, whereas SplitCommit in it's most efficient mode is interactive in both phases. However as previously mentioned, using the Fiat-Shamir heuristic (which as well requires a RO assumption) this can be turned non-interactive as well.
 \end{description}
