--- a/headers.tex
+++ b/headers.tex
@@ -9,11 +9,11 @@
 
 %%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\etal}{{\sl et~al.~}}
-\newcommand{\eg}{{\sl e.g.}}
-\newcommand{\ie}{{\sl i.e.}}
+\newcommand{\etal}{{\sl et~al.~}\xspace}
+\newcommand{\eg}{{\sl e.g.}\xspace}
+\newcommand{\ie}{{\sl i.e.}\xspace}
 \newcommand{\apriori}{{\sl a~priori\/}\xspace}
-\newcommand{\f}[1]{\ensuremath{\mathcal{F}_{\sf #1}}}
+\newcommand{\f}[1]{\ensuremath{\mathcal{F}_{\sf #1}}\xspace}
 
 % F style encoding
 %\newcommand{\encode}[3]{\ensuremath{F^\textsf{#1}_{#2}(#3)}}
