--- a/main.tex
+++ b/main.tex
@@ -61,18 +61,21 @@
 
 \begin{document}
 	
-	\title{SplitCommit: Implementing Homomorphic UC Commitments}
+	\title{SplitCommit:\\ Implementing Homomorphic UC Commitments}
 	
 	
 	\author{
-		Peter Rindal\thanks{Oregon State University,  {\sf rindalp@oregonstate.edu}. This author is supported by an ARCS foundation fellowship.}, Roberto  Trifiletti\thanks{Aarhus University, {\sf roberto@cs.au.dk}.}
+		Peter Rindal\thanks{Oregon State University,  {\sf rindalp@oregonstate.edu}. This author is supported by an ARCS foundation fellowship.}, Roberto  Trifiletti\thanks{Aarhus University, {\sf roberto@cs.au.dk}. This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 731583 (SODA).}
 		}
-		
-		\maketitle
+
+	\date{}
+
+	\maketitle
+	
 
 	
 	\begin{abstract}
-	In this white paper we present SplitCommit, a portable and efficient C++ implementation of the additively homomorphic commmitment scheme of Frederiksen, Jakobsen, Nielsen, and Trifiletti \cite{DBLP:conf/tcc/FrederiksenJNT16}. This document is meant to serve as a light-weight introduction to the scheme and give the reader an overview of its applicability for any given scenario. We include implementation design discussions and performance numbers as well as general usage guidelines. Finally we also include a small tutorial on how to use the library.
+	In this white paper we present SplitCommit, a portable and efficient C++ implementation of the recent additively homomorphic commmitment scheme of Frederiksen et al. \cite{DBLP:conf/tcc/FrederiksenJNT16}. This document is meant to serve as a light-weight introduction to the scheme and give the reader an overview of its applicability for any given scenario. We include implementation design discussions and performance numbers as well as general usage guidelines. Finally we also include a small tutorial on how to use the library.
 
 	\end{abstract}
 	
