--- a/intro.tex
+++ b/intro.tex
@@ -9,8 +9,8 @@ In this white paper we present SplitCommit, an efficient and portable C++14 impl
 \subsection{Overview of \cite{DBLP:conf/tcc/FrederiksenJNT16}}
 The commitment scheme of \cite{DBLP:conf/tcc/FrederiksenJNT16} provide UC-secure additively homomorphic two-party commitments using 1-out-of-2 Oblivious Transfer (OT) as the main building block. The scheme supports committing to vectors of length $k$ over any finite field $\Field$, but the SplitCommit implementation put forward in this work only implements commitments for the binary field $\Field_2 = \myset{0,1}$ and for $k \in \myset{1,128}$. In other words the source code works solely for committing to bit-strings of length 1 or 128. However, other bit-string lengths could be added in a straight forward way. Due to the binary field restriction we sometimes refer to the scheme as merely XOR-homomorphic. In addition to OT, the scheme also makes use of a linear error correction code (ECC) with parameters $[n,k,d]_\Field$ where $n$ is the codeword length, $k$ is the message length, and $d$ is the minimum distance for which we require $d \geq \ssec$ for statistical security parameter $s$. As provided, the implementation only includes ECC parameters for the widely used case of $s=40$. 
 
-The \cite{DBLP:conf/tcc/FrederiksenJNT16} scheme is tailored for committing to a batch of $m$ messages and intuitively works in the following way. The sender picks $m$ random messages ($k$-bit strings) and encode these using the above-mentioned ECC into $n$-bit strings. It then creates a 2-additive secret sharing of each codeword. We then view the two parts of the secret shares as two of bit matrices, where $i$'th secret sharing is located in the $i$'th column of the two matrices. For each $m$ bit \emph{row} of the two matrices, the parties perform an OT to transfer one of the two rows. As a result, for each of the $n$ bit positions in the secret shares, the receiver learns the corresponding bit value of either the first or second secret share, and it learns the same share-position for all $m$ codewords. Intuitively, by allowing the receiver to learn parts of each of the secret sharings, where the part that was learned is unknown to the sender, the probability for the sender to successfully change the value that it is committed to without being caught is negligible. Moreover, the receiver learns nothing about that committed value due to the receiver only learning disjoint parts of the secret sharing.
+The \cite{DBLP:conf/tcc/FrederiksenJNT16} scheme is tailored for committing to a batch of $m$ messages and intuitively works in the following way. The sender picks $m$ random messages ($k$-bit strings) and encode these using the above-mentioned ECC into $n$-bit strings. It then creates a 2-additive secret sharing of each of the resulting codewords. We view the two parts of the secret shares as making up two bit matrices, where the $i$'th secret sharing is located in the $i$'th column of the two matrices. For each $m$ bit \emph{row} of the two matrices, the parties perform an OT to transfer one of the two rows. As a result, for each of the $n$ bit positions in the secret shares, the receiver learns the corresponding bit value of either the first or second secret share, and it learns the same share-position for all $m$ codewords. Intuitively, by allowing the receiver to learn parts of each of the secret sharings, where the part that was learned is unknown to the sender, the probability for the sender to successfully change the value that it is committed to without being caught is negligible. Moreover, the receiver learns nothing about that committed value due to the receiver only learning disjoint parts of the secret sharing.
 
-In order to later decommit to a committed value the sender sends both shares of the corresponding codeword to the receiver. They can then check for each position that the value reported matches the local entry-share for this value. If they all match, and the reconstructed message is a valid codeword it accepts the message, else it aborts. In order to decommit to the XOR of messages, the sender instead sends the XOR of the corresponding shares and the receiver verifies using the XOR of its local shares. This works due to the ECC and additive secret sharing both being linear operations and therefore their composition is linear as well. 
+In order to later decommit to a committed value the sender sends both shares of the corresponding codeword to the receiver which can then check for each position that the value reported matches the local entry-share for this value. If they all match, and the reconstructed message is a valid codeword it accepts the message, else it aborts. In order to decommit to the XOR of messages, the sender instead sends the XOR of the corresponding shares and the receiver verifies using the XOR of its local shares. This works due to the ECC and additive secret sharing both being linear operations and therefore their composition is linear as well. 
 
 For security to hold, the scheme requires one additional step where sender gives an argument that it did not cheat. In particular a critical consistency check needs to be applied in order to ensure the sender sends secret shares that actually adds up to valid codewords. Also, in order to implement the above approach more efficiently, the parties run the 1-out-of-2 OTs on short $\csec$-bit strings and expand these using a pseudorandom generator (PRG), as opposed to running 1-out-of-2 OTs on the potentially much longer $m$-bit strings which would be much less efficient.
